--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "babel-polyfill": "^6.8.0",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-stage-0": "^6.5.0",
-    "koa": "^2.0.0"
+    "koa": "^2.0.0",
+    "koa-compose": "^3.1.0",
+    "koa-logger": "^2.0.0"
   },
   "devDependencies": {},
   "scripts": {
