--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "babel-preset-stage-0": "^6.5.0",
     "koa": "^2.0.0",
     "koa-compose": "^3.1.0",
-    "koa-logger": "^2.0.0"
+    "koa-logger": "^2.0.0",
+    "koa-router": "^7.0.1",
+    "koa-session2": "^1.0.8"
   },
   "devDependencies": {},
   "scripts": {
