--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "koa-compose": "^3.1.0",
     "koa-logger": "^2.0.0",
     "koa-router": "^7.0.1",
-    "koa-session2": "^1.0.8",
+    "koa-session2": "^2.1.0",
     "koa-static2": "^0.1.5",
     "koa-views": "^5.0.2",
     "mysql2": "^1.0.0-rc.9",
@@ -21,7 +21,8 @@
   },
   "devDependencies": {},
   "scripts": {
-    "start": "node babel.js",
+    "start": "node --harmony index.js",
+    "babel": "node babel.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
