--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-stage-0": "^6.5.0",
     "koa": "^2.0.0",
+    "koa-body": "^2.0.0",
     "koa-compose": "^3.1.0",
     "koa-logger": "^2.0.0",
     "koa-router": "^7.0.1",
@@ -23,6 +24,7 @@
   "scripts": {
     "start": "node --harmony index.js",
     "babel": "node babel.js",
+    "dev": "pm2 start pm2.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
